# QuickPaste

./: .gitignore  Cargo.toml  README.md  build.rs
artifacts/perf/: perf-20260407-110052.csv  perf-20260407-110052.txt
artifacts/perf-test/: perf-20260407-110004.txt
artifacts/ui-test/: home-startup-metrics.json  relaunch-check.json
assets/: windows-app.manifest
docs/: display-compatibility-fix-plan.md  item-icon-layout-review.md  product-requirements.md  ui-refactor-plan.md
src/: app.rs  config.rs  error.rs  lib.rs  main.rs  paths.rs
src/platform/: mod.rs  windows.rs
ui/: app-window.slint
