[package]
name = "myquickpaste-slint"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[[bin]]
name = "MyQuickPaste"
path = "src/main.rs"

[dependencies]
arboard = "3.6"
serde = { version = "1", features = ["derive"] }
slint = { version = "1.15", default-features = false, features = [
    "std",
    "backend-winit",
    "renderer-software",
    "compat-1-2",
] }
toml = "0.8"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_UI_Controls_Dialogs",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
slint-build = "1.15"

winresource = "0.1"
